--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,45 @@
-# Node / JS leftovers
+# Dependencies
 node_modules/
-npm-debug.log*
-yarn.lock
-package-lock.json
-pnpm-lock.yaml
+.pnp/
+.pnp.js
 
-# OS / Editor
+# Next.js build output
+.next/
+out/
+
+# Production build
+build/
+dist/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
 .DS_Store
 Thumbs.db
-.vscode/
-.idea/
 
-# Env
-.env
+# PHP files (legacy - kept for reference during migration)
+# config.php
+# db_connect.php
