--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "next": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
